--- a/style.css
+++ b/style.css
@@ -1,56 +1,69 @@
+:root {
+    --title-background: linear-gradient(120deg, #a9efa9, #8cc8f2);
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .content {
     position: relative;
     width: 400px;
     height: 700px;
-    background-color: lightgray;
+    background-color: #ddd;
     border-radius: 20px;
 }
 
 header {
     text-align: center;
-    color: purple;
-    background-color: pink;
+    color: white;
+    background: var(--title-background);
     border-radius: 20px 20px 0 0;
 }
 
 h1 {
-    padding: 8px;
-    font-size: 20pt;
+    padding: 10px;
+    font-size: 18pt;
 }
 
 section > p {
     position: relative;
     margin: 8px 16px;
+    font-size: 14pt;
 }
 
 
 section > p > span {
     position: absolute;
     right: 0;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: skyblue;
+    background: var(--title-background);
     border-radius: 0 0 20px 20px;
 }
 
 input {
     width: calc(100% - 16px);
     height: 30px;
+    font-size: 12pt;
     border: 0;
     padding: 0 8px;
 }
 
 #add {
     width: 50px;
-    height: 50px;
     border-radius: 50%;
     margin: 8px auto;
     color: white;
     background-color: black;
     font-size: 24pt;
     text-align: center;
+    line-height: 50px;
+    cursor: pointer;
 }
