--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #f5f5dc;
 }
 
 .content {
@@ -12,6 +13,7 @@ body {
     height: 700px;
     background-color: #ddd;
     border-radius: 20px;
+    margin: 0 auto;
 }
 
 header {
