section에 overflow 발생 시 scroll 추가

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 header {
+    /* height: 55px; */
     text-align: center;
     color: white;
     background: var(--title-background);
@@ -26,6 +27,11 @@ header {
 h1 {
     padding: 10px;
     font-size: 18pt;
+}
+
+section {
+    overflow-y: auto;
+    max-height: 530px;
 }
 
 section > p {
